GoodTIme_Intelij/src/objects/Line_Items__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF( ABS(Product_Date__c - TODAY()) &lt;= 365,IF(LEN(TEXT(ABS(Product_Date__c - TODAY())))==1,TEXT(ABS(Product_Date__c - TODAY()))&amp;&quot;        &quot;&amp; IMAGE(&quot;/resource/1537972112000/Green&quot;,&quot;Green&quot;,15,20), 

IF(LEN(TEXT(ABS(Product_Date__c - TODAY())))==2,TEXT(ABS(Product_Date__c - TODAY()))&amp;&quot;      &quot;&amp;  IMAGE(&quot;/resource/1537972112000/Green&quot;,&quot;Green&quot;,15,20),

IF(LEN(TEXT(ABS(Product_Date__c - TODAY())))==3,TEXT(ABS(Product_Date__c - TODAY()))&amp;&quot;    &quot;&amp; IMAGE(&quot;/resource/1537972112000/Green&quot;,&quot;Green&quot;,15,20),

IF(LEN(TEXT(ABS(Product_Date__c - TODAY())))==4,TEXT(ABS(Product_Date__c - TODAY())) &amp;&quot;  &quot;&amp; IMAGE(&quot;/resource/1537972112000/Green&quot;,&quot;Green&quot;,15,20),TEXT(ABS(Product_Date__c - TODAY()))&amp;&quot; &quot;&amp; IMAGE(&quot;/resource/1537972112000/Green&quot;,&quot;Green&quot;,15,20))))),

IF(ABS(Product_Date__c - TODAY()) &gt; 365 &amp;&amp; ABS(Product_Date__c - TODAY()) &lt; 730,IF(LEN(TEXT(ABS(Product_Date__c - TODAY())))==1,TEXT(Product_Date__c - TODAY()) &amp;&quot;        &quot;&amp;  IMAGE(&quot;/resource/1537972152000/Yellow&quot;,&quot;Yellow&quot;,15,20),

IF(LEN(TEXT(ABS(Product_Date__c - TODAY())))==2,TEXT(ABS(Product_Date__c - TODAY())) &amp;&quot;      &quot;&amp;  IMAGE(&quot;/resource/1537972152000/Yellow&quot;,&quot;Yellow&quot;,15,20),

IF(LEN(TEXT(ABS(Product_Date__c - TODAY())))==3,TEXT(ABS(Product_Date__c - TODAY())) &amp;&quot;    &quot;&amp;  IMAGE(&quot;/resource/1537972152000/Yellow&quot;,&quot;Yellow&quot;,15,20),

IF(LEN(TEXT(ABS(Product_Date__c - TODAY())))==4,TEXT(ABS(Product_Date__c - TODAY())) &amp;&quot;  &quot;&amp;  IMAGE(&quot;/resource/1537972152000/Yellow&quot;,&quot;Yellow&quot;,15,20),TEXT(ABS(Product_Date__c - TODAY())) &amp;&quot; &quot;&amp;  IMAGE(&quot;/resource/1537972152000/Yellow&quot;,&quot;Yellow&quot;,15,20))))),

IF(ABS(ABS(Product_Date__c - TODAY())) &gt;= 730,IF(LEN(TEXT(ABS(Product_Date__c - TODAY())))==1,TEXT(ABS(Product_Date__c - TODAY())) &amp;&quot;        &quot;&amp;  IMAGE(&quot;/resource/1537972132000/Red&quot;,&quot;Red&quot;,15,20), 

IF(LEN(TEXT(ABS(Product_Date__c - TODAY())))==2,TEXT(ABS(Product_Date__c - TODAY())) &amp;&quot;      &quot;&amp; IMAGE(&quot;/resource/1537972132000/Red&quot;,&quot;Red&quot;,15,20),

IF(LEN(TEXT(ABS(Product_Date__c - TODAY())))==3,TEXT(ABS(Product_Date__c - TODAY())) &amp;&quot;    &quot;&amp;  IMAGE(&quot;/resource/1537972132000/Red&quot;,&quot;Red&quot;,15,20),

IF(LEN(TEXT(ABS(Product_Date__c - TODAY())))==4,TEXT(ABS(Product_Date__c - TODAY())) &amp;&quot;  &quot;&amp;  IMAGE(&quot;/resource/1537972132000/Red&quot;,&quot;Red&quot;,15,20),TEXT(ABS(Product_Date__c - TODAY()))&amp;&quot; &quot;&amp;  IMAGE(&quot;/resource/1537972132000/Red&quot;,&quot;Red&quot;,15,20))))),NULL) ))</formula>
        <label>Age</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <formula>Product__r.Item_Class_Desc__c</formula>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Description__c</fullName>
        <formula>Product__r.Item_Desc__c</formula>
        <label>Item Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <formula>Product__r.Item_Num__c</formula>
        <label>Item #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Date__c</fullName>
        <label>Product Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.Item_Status__c</field>
                <operation>notEqual</operation>
                <value>3</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Projected_Amount__c</fullName>
        <label>Projected Amount</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>100%</fullName>
                </value>
                <value>
                    <fullName>50%</fullName>
                </value>
                <value>
                    <fullName>0%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QTY__c</fullName>
        <label>QTY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Request_Ticket__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request Ticket</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Return_Code_Formula__c</fullName>
        <formula>LEFT(TEXT(Return_Code__c), 1)</formula>
        <label>Return Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_Code__c</fullName>
        <label>Return Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1. Out of Date &gt;1 Year</fullName>
                </value>
                <value>
                    <fullName>2. Product Not Performing &lt;1 Year</fullName>
                </value>
                <value>
                    <fullName>3. Damage - Customer Warehouse</fullName>
                </value>
                <value>
                    <fullName>4. Damaged during Shipping</fullName>
                </value>
                <value>
                    <fullName>5. Duplicate Order Shipped</fullName>
                </value>
                <value>
                    <fullName>6. Product Defective</fullName>
                </value>
                <value>
                    <fullName>7. Retail Return</fullName>
                </value>
                <value>
                    <fullName>8. Distributor/Keying Error</fullName>
                </value>
                <value>
                    <fullName>9. Incorrect Quantity Ordered</fullName>
                </value>
                <value>
                    <fullName>10. Incorrect Item Shipped</fullName>
                </value>
                <value>
                    <fullName>11. Account Closing</fullName>
                </value>
                <value>
                    <fullName>12. Other - Explain in Note Section</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Line Items</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LI-{0000}</displayFormat>
        <label>Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>